--- a/views/viewDetails.ejs
+++ b/views/viewDetails.ejs
@@ -53,7 +53,7 @@
 
 
 <!--Footer-->
-<footer class="page-footer font-small pt-4" id="about" style="background-color: #eeeeee;margin-top:20px; position: absolute; bottom: 0; width: 100%;">
+<footer class="page-footer font-small pt-4" id="about" style="background-color: #eeeeee;margin-top:20px; ">
     <div class="container-fluid text-center text-md-left">
       <div class="row">
         <div class="col-md-6 mt-md-0 mt-3">
