--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -71,7 +71,7 @@
                         }]
                     },
                     options: {
-                        responsive: false,
+                        responsive: true,
                         scales: {
                             y: {
                                 beginAtZero:true
